- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    None
- 
    5.6
- 
    RHEL 7.1 & openSUSE 42.1
- 
        07667b439025a8bb47f6089673b11a479b21b72d 932cce18f72d9af99629f1bad8bd1b6114de0300
This test constantly fails in RHEL 7.1
FAIL! : tst_QNetworkReply::authenticationCacheAfterCancel(http+socksauth) '!QTestEventLoop::instance().timeout()' returned FALSE. () Loc: [../tst_qnetworkreply.cpp(6830)] FAIL! : tst_QNetworkReply::authenticationCacheAfterCancel(https+socksauth) '!QTestEventLoop::instance().timeout()' returned FALSE. () Loc: [../tst_qnetworkreply.cpp(6830)]
- is required for
- 
                     QTQAINFRA-949
        Verify RHEL 7 in CI QTQAINFRA-949
        Verify RHEL 7 in CI-         
- Closed
 
-         
- 
                     QTQAINFRA-968
        Get openSUSE 42.1 into Coin for Qt 5.8 QTQAINFRA-968
        Get openSUSE 42.1 into Coin for Qt 5.8-         
- Closed
 
-         
- relates to
- 
                    QTBUG-23136 Cannot distinguish SOCKS5 authentication failure from other connection errors, causing QNetworkAccessManager to cache incorrect password -         
- Open
 
-         
| For Gerrit Dashboard: QTBUG-51545 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 150743,3 | Blacklist tst_qnetworkreply tests that fail in RHEL 7.1 | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 | 
| 151693,3 | QSocks5SocketEngine: connect after auth fail as if connecting afresh. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |