QSocks5SocketEngine: connect after auth fail as if connecting afresh.

If the client has responded to an earlier auth fail sensibly, further
use of the socks connection probably means we have fresh credentials.
So treat AuthenticatingError like Uninitialized.  This makes
tst_QNetworkReply::authenticationCacheAfterCancel(*+socksauth) work
again.

Task-number: QTBUG-51545
Change-Id: I237ca5a3194b093cc6480dd33aa7709b7b584941
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@theqtcompany.com>

cregit: 932cce18f72d9af99629f1bad8bd1b6114de0300 https://github.com/qt/qtbase/commit/932cce18f72d9af99629f1bad8bd1b6114de0300