src/network/socket/qsocks5socketengine.cpp
@@ -5616,6 +5616,15 @@ operator|==
 name|QSocks5SocketEnginePrivate
 operator|::
 name|Uninitialized
+comment|// We may have new auth credentials since an earlier failure:
+operator|||
+name|d
+operator|->
+name|socks5State
+operator|==
+name|QSocks5SocketEnginePrivate
+operator|::
+name|AuthenticatingError
 condition|)
 block|{
 name|setState
